[gd_scene load_steps=19 format=2]

[ext_resource path="res://sprites/buttons/DDL_Button_Home_Hover.png" type="Texture" id=1]
[ext_resource path="res://GUI/pause.gd" type="Script" id=2]
[ext_resource path="res://sprites/buttons/M_DDL_Tecla_Pressed.png" type="Texture" id=3]
[ext_resource path="res://sprites/buttons/DDL_Button_Home_Pressed.png" type="Texture" id=4]
[ext_resource path="res://sprites/buttons/DDL_Button_Play.png" type="Texture" id=5]
[ext_resource path="res://sprites/buttons/DDL_Button_Play_Hover.png" type="Texture" id=6]
[ext_resource path="res://sprites/buttons/DDL_Button_Play_Pressed.png" type="Texture" id=7]
[ext_resource path="res://sprites/buttons/DDL_Button_Home.png" type="Texture" id=8]
[ext_resource path="res://sprites/buttons/DDL_Button_Back.png" type="Texture" id=9]
[ext_resource path="res://sprites/buttons/DDL_Button_Back_Hover.png" type="Texture" id=10]
[ext_resource path="res://sprites/buttons/DDL_Button_Back_Pressed.png" type="Texture" id=11]
[ext_resource path="res://text_fonts/PIXELADE.TTF" type="DynamicFontData" id=12]
[ext_resource path="res://sprites/main_background/DDL_Fondo_menus.png" type="Texture" id=13]
[ext_resource path="res://sprites/buttons/M_DDL_Tecla.png" type="Texture" id=14]
[ext_resource path="res://sprites/buttons/M_DDL_Tecla_Pressed_Hover.png" type="Texture" id=15]
[ext_resource path="res://sprites/buttons/M_DDL_Tecla_Hover.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 12 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
music_on = ExtResource( 14 )
music_on_hover = ExtResource( 16 )
music_off = ExtResource( 3 )
music_off_hover = ExtResource( 15 )

[node name="MenuBackground" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.5
margin_top = -81.0
margin_right = 112.5
margin_bottom = 81.0
texture = ExtResource( 13 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -15.0
margin_top = 15.0
margin_right = 15.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Pausa"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -45.0
margin_right = 56.0
margin_bottom = 57.5
custom_constants/separation = 20
alignment = 1

[node name="Resume" type="TextureButton" parent="VBoxContainer"]
margin_right = 32.0
margin_bottom = 25.0
focus_neighbour_top = NodePath("../../MusicButton")
focus_neighbour_bottom = NodePath("../Restart")
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )

[node name="Restart" type="TextureButton" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 32.0
margin_bottom = 70.0
focus_neighbour_top = NodePath("../Resume")
focus_neighbour_bottom = NodePath("../BackToMenu")
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 10 )
texture_focused = ExtResource( 10 )

[node name="BackToMenu" type="TextureButton" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 32.0
margin_bottom = 115.0
focus_neighbour_top = NodePath("../Restart")
focus_neighbour_bottom = NodePath("../../MusicButton")
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_focused = ExtResource( 1 )

[node name="Resume" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -42.0
margin_right = -8.0
margin_bottom = -25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Reanudar"
align = 1
valign = 1

[node name="ReturnMenu" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -10.0
margin_right = -8.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Reiniciar
nivel"
align = 1
valign = 1

[node name="Quit" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = 38.0
margin_right = -8.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Volver al
men√∫"
align = 1
valign = 1

[node name="MusicButton" type="TextureButton" parent="."]
margin_left = 240.0
margin_top = 16.0
margin_right = 256.0
margin_bottom = 33.0
focus_neighbour_top = NodePath("../VBoxContainer/BackToMenu")
focus_neighbour_bottom = NodePath("../VBoxContainer/Resume")
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 16 )
texture_focused = ExtResource( 16 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
[connection signal="pressed" from="MusicButton" to="." method="_on_MusicButton_pressed"]
